change according mentor comments

--- a/portfolio.html
+++ b/portfolio.html
@@ -80,9 +80,10 @@
                   alt="ноутбук с фото людей"
                   width="370"
                 />
-
-                <h2 class="title-service">Технокряк</h2>
-                <p class="text">Веб-сайт</p>
+                <div class="servise-container">
+                  <h2 class="title-service">Технокряк</h2>
+                  <p class="text">Веб-сайт</p>
+                </div>
               </a>
             </li>
             <li class="item-servise">
@@ -92,9 +93,12 @@
                   alt="баскетболисты с мячем"
                   width="370"
                 />
-
-                <h2 class="title-service">Постер New Orlean vs Golden Star</h2>
-                <p class="text">Дизайн</p>
+                <div class="servise-container">
+                  <h2 class="title-service">
+                    Постер New Orlean vs Golden Star
+                  </h2>
+                  <p class="text">Дизайн</p>
+                </div>
               </a>
             </li>
             <li class="item-servise">
@@ -105,9 +109,10 @@
                ресторанаe a food"
                   width="370"
                 />
-
-                <h2 class="title-service">Ресторан Seafood</h2>
-                <p class="text">Приложение</p>
+                <div class="servise-container">
+                  <h2 class="title-service">Ресторан Seafood</h2>
+                  <p class="text">Приложение</p>
+                </div>
               </a>
             </li>
             <li class="item-servise">
@@ -117,9 +122,10 @@
                   alt="наушники"
                   width="370"
                 />
-
-                <h2 class="title-service">Проект Prime</h2>
-                <p class="text">Маркетинг</p>
+                <div class="servise-container">
+                  <h2 class="title-service">Проект Prime</h2>
+                  <p class="text">Маркетинг</p>
+                </div>
               </a>
             </li>
             <li class="item-servise">
@@ -129,9 +135,10 @@
                   alt="две коробки"
                   width="370"
                 />
-
-                <h2 class="title-service">Проект Boxes</h2>
-                <p class="text">Приложение</p>
+                <div class="servise-container">
+                  <h2 class="title-service">Проект Boxes</h2>
+                  <p class="text">Приложение</p>
+                </div>
               </a>
             </li>
             <li class="item-servise">
@@ -141,9 +148,10 @@
                   alt="ноутбук с изображением карты мира"
                   width="370"
                 />
-
-                <h2 class="title-service">Inspiration has no Borders</h2>
-                <p class="text">Веб-сайт</p>
+                <div class="servise-container">
+                  <h2 class="title-service">Inspiration has no Borders</h2>
+                  <p class="text">Веб-сайт</p>
+                </div>
               </a>
             </li>
             <li class="item-servise">
@@ -153,18 +161,20 @@
                   alt="журнала с надписью ограниченное издательство"
                   width="370"
                 />
-
-                <h2 class="title-service">Издание Limited Edition</h2>
-                <p class="text">Дизайн</p>
+                <div class="servise-container">
+                  <h2 class="title-service">Издание Limited Edition</h2>
+                  <p class="text">Дизайн</p>
+                </div>
               </a>
             </li>
             <li class="item-servise">
               <a href=""
                 ><img src="./imgportfolio/lab.jpg" alt="буквы" width="370" />
-
-                <h2 class="title-service">Проект LAB</h2>
-                <p class="text">Маркетинг</p></a
-              >
+                <div class="servise-container">
+                  <h2 class="title-service">Проект LAB</h2>
+                  <p class="text">Маркетинг</p>
+                </div>
+              </a>
             </li>
             <li class="item-servise">
               <a href="">
@@ -173,12 +183,13 @@
                   alt="руки на клавиатуре"
                   width="370"
                 />
-
-                <h2 class="title-service">Growing Business</h2>
-                <p class="text">Приложение</p>
+                <div class="servise-container">
+                  <h2 class="title-service">Growing Business</h2>
+                  <p class="text">Приложение</p>
+                </div>
               </a>
             </li>
-          </ul
+          </ul>
         </div>
       </section>
     </main>
