--- a/index.html
+++ b/index.html
@@ -48,15 +48,13 @@
       <!--Poster-->
 
       <section class="poster-section">
-        <div class="container">
-          <h1 class="poster-title">
-            Эффективные решения <br />
-            для вашего бизнеса
-          </h1>
-          <button type="button" class="button">
-            <span>Заказать услугу</span>
-          </button>
-        </div>
+        <h1 class="poster-title">
+          Эффективные решения <br />
+          для вашего бизнеса
+        </h1>
+        <button type="button" class="button">
+          <span>Заказать услугу</span>
+        </button>
       </section>
 
       <!--Advantage-->
@@ -128,23 +126,32 @@
           <ul class="list comand-list flexbox">
             <li class="item-command">
               <img src="./image/igordemianenko.jpg" alt="Игорь Демьяненко" />
-              <h3 class="title">Игорь Демьяненко</h3>
-              <p lang="en">Product Designer</p>
+              <div class="comander-container">
+                <h3 class="title">Игорь Демьяненко</h3>
+                <p lang="en">Product Designer</p>
+              </div>
             </li>
             <li class="item-command">
               <img src="./image/olharepina.jpg" alt="Ольга Репина" />
-              <h3 class="title">Ольга Репина</h3>
-              <p lang="en" class="decor"><span> Frontend Developer </span></p>
+
+              <div class="comander-container">
+                <h3 class="title">Ольга Репина</h3>
+                <p lang="en" class="decor"><span> Frontend Developer </span></p>
+              </div>
             </li>
             <li class="item-command">
               <img src="./image/nikolaitarasov.jpg" alt="Николай Тарасов" />
-              <h3 class="title">Николай Тарасов</h3>
-              <p lang="en">Marketing</p>
+              <div class="comander-container">
+                <h3 class="title">Николай Тарасов</h3>
+                <p lang="en">Marketing</p>
+              </div>
             </li>
             <li class="item-command">
               <img src="./image/michailermakov.jpg" alt="Михаил Ермаков" />
-              <h3 class="title">Михаил Ермаков</h3>
-              <p lang="en">UI Designer</p>
+              <div class="comander-container">
+                <h3 class="title">Михаил Ермаков</h3>
+                <p lang="en">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
